[tool.poetry]
name = "simplemonads"
version = "1.0.12"
description = "Easy to use monads (containers), with pattern matching, that improve the quality of your python code. Use Just to end checking for None, Success to end unhandled exceptions, Future for async, and Reader for dependencies."
authors = ["Stephen Daves"]
license = "UNLICENSE"
readme = "README.md"
repository = "https://github.com/sdaves/simplemonads"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
